/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.3.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit
    implementation libs.guava
    implementation project(':AutoPPTAppCore')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = "25"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'org.fcnabc.autoppt.app.ui.Main'
    applicationDefaultJvmArgs = [
        '--enable-native-access=javafx.graphics'
    ]
}
